--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -1,6 +1,9 @@
 <html>
   <head>
     <title>Eleventy + Netlify CMS from scratch</title>
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
+
   </head>
 
   <body>
@@ -8,6 +11,18 @@
       Eleventy + Netlify CMS from scratch
     </h1>
     {{ content | safe }}
+
+    <script>
+    if (window.netlifyIdentity) {
+      window.netlifyIdentity.on("init", user => {
+        if (!user) {
+          window.netlifyIdentity.on("login", () => {
+            document.location.href = "/admin/";
+          });
+        }
+      });
+    }
+  </script>
   </body>
 
 </html>
