--- a/src/sass/_sitenav.scss
+++ b/src/sass/_sitenav.scss
@@ -40,13 +40,6 @@
     flex-wrap: wrap;
     align-items: center;
 
-    @include lt-sm {
-      li:nth-child(n+2) a  {
-margin-left: 0;
-        }
-      
-    }
-
   }
 
   &__container {
@@ -64,6 +57,7 @@ margin-left: 0;
   &__navlist {
     li + li {
       margin-left: 2rem;
+
     }
 
     li > a {
@@ -72,6 +66,11 @@ margin-left: 0;
       font-family: "Bitter", serif;
       letter-spacing: 0.025em;
     }
+
+  @include lt-sm {
+        margin-left: -2rem;
+      }
+    
   }
 }
 // stylelint-enable
