Add colophon, side updates

--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -51,9 +51,10 @@
         </a>
       </li>
       {%- endfor %} #}
-      <li><a class="underline" href="/writing">Writing</a></li>
- <li><a class="underline" href="/art">Art</a></li>
-       <li><a class="underline" href="/about">About</a></li>
+      <li>© 2022 - Parth Shiralkar</li>
+      <li><a class="underline" href="/colophon">Colophon</a></li>
+  <li><a class="underline" href="/">RSS</a></li>
+       {# <li><a class="underline" href="/">Home</a></li> #}
     </ul>
       </div>
     </footer>
