--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -53,7 +53,8 @@
       {%- endfor %} #}
       <li>© 2022 - Parth Shiralkar</li>
       <li><a class="underline" href="/colophon">Colophon</a></li>
-  <li><a class="underline" href="/">RSS</a></li>
+  <li><a class="underline" href="/feed">RSS</a></li>
+    <li><a class="underline" href="/sitemap.xml">Sitemap</a></li>
        {# <li><a class="underline" href="/">Home</a></li> #}
     </ul>
       </div>
