--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -41,7 +41,7 @@
 </div>
     <footer class="tdbc-background">
       <div class="tdbc-container tdbc-ink--light tdbc-text-align-center">
-<ul role="list" class="tdbc-sitenav__navlist tdbc-list-unstyled">
+<ul role="list" class="tdbc-sitenav__navlist tdbc-sitenav__footer tdbc-list-unstyled">
       {# {% for link in collections.pages %}
       <li>
         <a
