--- a/src/sass/_theme.scss
+++ b/src/sass/_theme.scss
@@ -2,7 +2,7 @@ $tdbc-color-primary: #fff2e5 !default;
 $tdbc-color-secondary: #EB89BC !default;
 $tdbc-color-background: #170808 !default;
 
-$hover-font-bg: #3a1700 !default;
+$hover-font-bg: #3d052f81 !default;
 $hover-font: #320d0C !default;
 
 $tdbc-brand-colors: (
