--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -37,7 +37,7 @@ article {
 }
 // stylelint-enable
 
-a.tdbc-container {
+.tdbc-container {
   display: flex;
   flex-direction: column;
   width: 100%;
