--- a/src/colophon.njk
+++ b/src/colophon.njk
@@ -4,6 +4,8 @@ templateEngineOverride: md, njk
 title: Colophon
 description: I don't think we're in Kansas anymore...😧
 ---
+> <div class="tdbc-lead"><span class="bold600">col⋅o⋅phon</span> n. An inscription, usually at the end of a book, giving facts about its publication.</div>
+
 This website was created by hand with love and affection on an old but trustworthy gaming laptop. It is written in HTML, Markdown, Nunjucks, CSS, and Javascript.
 
 [Eleventy](https://www.11ty.dev/) is used for static page generation. [Git](https://git-scm.com/) is used for version control. [Github](https://github.com) is used to store the repository. This site is hosted on [Netlify](https://www.netlify.com/).
