Update font families, site colors

--- a/src/_layouts/skin.njk
+++ b/src/_layouts/skin.njk
@@ -1,5 +1,3 @@
-{% include 'sitenav.njk' %}
-
 <!DOCTYPE html>
 <html lang="en">
 {%- set pageTitle %}{% if title %}{{ title }} | {% endif %}{{ meta.siteName }}{% endset -%}
@@ -35,28 +33,8 @@
     />
   </head>
   <body>
-    <div>
+    <div class="irevamp-skin">
     {{ content | safe }}
 </div>
-    <footer class="irevamp-background">
-      <div class="irevamp-container irevamp-ink--light irevamp-text-align-center">
-<ul role="list" class="irevamp-sitenav__navlist irevamp-sitenav__footer irevamp-list-unstyled">
-      {# {% for link in collections.pages %}
-      <li>
-        <a
-          {% if currentUrl === link.url %}aria-current="page"{% endif %}
-          href="{{ link.url }}">
-            {{ link.data.title }}
-        </a>
-      </li>
-      {%- endfor %} #}
-      <li><a class="underline nodecoration" href="https://raw.githubusercontent.com/partheus/site-revamp/main/LICENSE.txt">© 2022 - Parth Shiralkar</a></li>
-      <li><a class="underline" href="/colophon">Colophon</a></li>
-  <li><a class="underline" href="/feed">RSS</a></li>
-    <li><a class="underline" href="/sitemap.xml">Sitemap</a></li>
-       {# <li><a class="underline" href="/">Home</a></li> #}
-    </ul>
-      </div>
-    </footer>
   </body>
 </html>
