--- a/src/index.njk
+++ b/src/index.njk
@@ -2,14 +2,17 @@
 layout: base.njk
 templateEngineOverride: md, njk
 ---
-
 <header class="irevamp-hero">
   <div class="irevamp-container slide-up hello">
-    <h1 class="irevamp-ink--primary salutation">Hi, I'm Parth Shiralkar.</h1>
-    <h5 class="irevamp-content-maxlength irevamp-ink--primary irevamp-mx-auto">
-      I'm a web developer, documentation specialist, business analyst, a few other adjectives and nouns, retired knight of the Round Table, close confidante of Merlin, freelance worldsaver, etc. etc.
-      <p></p>Welcome to my website.
-    </h5>
+    <h1 class="irevamp-ink--primary salutation">Parth Shiralkar</h1>
+    <div class="intro irevamp-content-maxlength irevamp-ink--primary uppercase">household chef. developer.</div>
+    <div class="intro-about irevamp-content-maxlength irevamp-ink--primary">
+      
+  I'm a software engineer specializing in modern web applications, with industry experience in the Node.js, Ruby/Rails, and React.js ecosystems.
+
+  Currently, I work as a front-end web developer in [Portland, OR](https://parth.ninja).
+
+  </div>
   </div>
 </header>
 <main class="irevamp-container">
