--- a/src/sass/_card.scss
+++ b/src/sass/_card.scss
@@ -5,9 +5,11 @@
   position: relative;
   flex-direction: column;
   width: 100%;
-  border-radius: $irevamp-border-radius;
+  border-top-right-radius:  $irevamp-border-radius;
+  border-bottom-right-radius:  $irevamp-border-radius;
   background-color: $hover-font-bg;
-  box-shadow: 0px 0px 1px 1px $irevamp-color-secondary;
+  // box-shadow: 0px 0px 1px 1px $irevamp-color-secondary;
+  border-left: 4px solid $irevamp-color-secondary;
 
   &__title {
     margin-bottom: 1rem;
@@ -25,7 +27,8 @@
       width: 100%;
       height: 100%;
       transition: 180ms box-shadow ease-in;
-      border-radius: 8px;
+      border-top-right-radius:  $irevamp-border-radius;
+      border-bottom-right-radius:  $irevamp-border-radius;
       content: "";
     }
 
@@ -67,13 +70,14 @@
   }
 
   &:hover a.irevamp-card__title::before {
-    box-shadow: 0 0 0 3px irevamp-color("primary");
+    border-left: 4px solid irevamp-color("primary");
   }
 
   img:first-child {
     object-fit: cover;
     max-height: 10em;
-    border-radius: $irevamp-border-radius $irevamp-border-radius 0 0;
+    border-top-right-radius:  $irevamp-border-radius;
+    border-bottom-right-radius:  $irevamp-border-radius;
   }
   // stylelint-enable
 
