--- a/src/sass/_theme.scss
+++ b/src/sass/_theme.scss
@@ -38,7 +38,9 @@ $irevamp-button-variants: "primary", "secondary", "light", "gray" !default;
 $irevamp-link-color: irevamp-color("primary") !default;
 $irevamp-border-radius: 8px !default;
 
-$irevamp-font-family: 'Crimson Pro', serif !default;
+$irevamp-font-family-primary: 'Work Sans', sans-serif !default;
+$irevamp-font-family-secondary: 'Bitter', serif !default;
+
 $irevamp-strong-font-weight: 500 !default;
 $irevamp-h1-font-size: 48px;
 $irevamp-h2-font-size: 44px;
