Fix frontend issues

--- a/src/sass/_card.scss
+++ b/src/sass/_card.scss
@@ -10,11 +10,13 @@
   background-color: $hover-font-bg;
   // box-shadow: 0px 0px 1px 1px $irevamp-color-secondary;
   border-left: 4px solid $irevamp-color-secondary;
+  transition: all ease-in-out 0.3s;
+  padding: 22px;
 
   &__title {
     margin-bottom: 1rem;
     font-size: $irevamp-h4-font-size;
-    line-height: 1.15;
+    line-height: 2;
     text-decoration: none;
   }
 
@@ -41,12 +43,12 @@
     }
   }
 
-  &__content {
+  a.irevamp-card__content {
     display: flex;
     position: relative;
     flex-direction: column;
     flex-grow: 1;
-    padding: 24px;
+ 
 
     a:last-child {
       align-self: start;
@@ -69,8 +71,10 @@
     }
   }
 
-  &:hover a.irevamp-card__title::before {
-    border-left: 4px solid irevamp-color("primary");
+  &:hover  {
+    border-left: 4px solid $irevamp-color-primary;
+    transition: all ease-in-out 0.3s;
+    background-color: $irevamp-color-background;
   }
 
   img:first-child {
