--- a/src/colophon.njk
+++ b/src/colophon.njk
@@ -4,7 +4,9 @@ templateEngineOverride: md, njk
 title: Colophon
 description: I don't think we're in Kansas anymore...😧
 ---
-> <div class="irevamp-lead"><span class="bold600">col⋅o⋅phon</span> n. An inscription, usually at the end of a book, giving facts about its publication.</div>
+"All publishers are Columbuses." - Mark Twain
+
+> <div class="irevamp-text"><span class="bold600">col⋅o⋅phon</span> n. An inscription, usually at the end of a book, giving facts about its publication.</div>
 
 This website was created by hand with love and affection on an old but trustworthy gaming laptop. It is written in HTML, Markdown, Nunjucks, CSS, and Javascript.
 
