--- a/src/index.njk
+++ b/src/index.njk
@@ -8,7 +8,7 @@ templateEngineOverride: md, njk
     <div class="intro irevamp-content-maxlength irevamp-ink--primary uppercase">household chef. developer.</div>
     <div class="intro-about irevamp-content-maxlength irevamp-ink--primary">
       
-  I'm a software engineer specializing in modern web applications, with industry experience in the Node.js, Ruby/Rails, and React.js ecosystems.
+  I'm a frontend engineer specializing in modern web applications, with industry experience in the Node.js, Ruby/Rails, and React.js ecosystems.
 
   Currently, I work as a front-end web developer in [Portland, OR](https://parth.ninja).
 
@@ -17,8 +17,9 @@ templateEngineOverride: md, njk
 </header>
 <main class="irevamp-container">
   <div class="irevamp-section slide-up">
+    <h5>Posts:</h5>
     <ul class="irevamp-column-container">
-      {%- for page in collections.pages -%}
+      {%- for page in collections.pages | reverse -%}
       <li class="irevamp-card">
         <div class="irevamp-card__content">
           <a href="{{ page.url }}" class="irevamp-card__title bold600">{{ page.data.title }}</a>
