--- a/src/index.njk
+++ b/src/index.njk
@@ -5,12 +5,12 @@ templateEngineOverride: md, njk
 <header class="irevamp-hero">
   <div class="irevamp-container slide-up hello">
     <h1 class="irevamp-ink--primary salutation">Parth Shiralkar</h1>
-    <div class="intro irevamp-content-maxlength irevamp-ink--primary uppercase">household chef. developer.</div>
+    <div class="intro irevamp-content-maxlength irevamp-ink--primary uppercase">rookie chef. developer.</div>
     <div class="intro-about irevamp-content-maxlength irevamp-ink--primary">
       
-  I'm a frontend engineer specializing in modern web applications, with industry experience a [variety of ecosystems]().
+  Like any delicious [recipe](/colophon), I believe websites are made by caefully choosing a few simple ingredients and preparing them well.
 
-  Currently, I work as a front-end web developer in [Portland, OR](https://parth.ninja).
+  I'm a big fan of most things. Currently, I work as a front-end web developer in [Portland, OR](https://parth.ninja).
 
   </div>
   </div>
