Update favicons, CSS

--- a/src/_layouts/post.njk
+++ b/src/_layouts/post.njk
@@ -11,5 +11,7 @@ layout: base.njk
   </div>
 </header>
 <main class="irevamp-container slide-up">
+  <article class="irevamp-mx-auto">
     {{ content | safe }}
+  </article>
 </main>
