--- a/src/sass/_theme.scss
+++ b/src/sass/_theme.scss
@@ -4,7 +4,7 @@ $irevamp-color-secondary-light: #e23f93 !default;
 $irevamp-color-background: #170808 !default;
 
 $hover-font-bg: #3d052f81 !default;
-$hover-font: #320d0C !default;
+$hover-font: #25021d !default;
 
 $irevamp-brand-colors: (
   "primary": $irevamp-color-primary,
