--- a/src/index.njk
+++ b/src/index.njk
@@ -5,7 +5,7 @@ templateEngineOverride: md, njk
 <header class="irevamp-hero">
   <div class="irevamp-container slide-up hello">
     <h1 class="irevamp-ink--primary salutation">Parth Shiralkar</h1>
-    <div class="intro irevamp-content-maxlength irevamp-ink--primary uppercase">rookie chef. developer.</div>
+    <div class="intro irevamp-content-maxlength irevamp-ink--primary uppercase">author. developer. likes daal.</div>
     <div class="intro-about irevamp-content-maxlength irevamp-ink--primary">
       
   Like any delicious [recipe](/colophon), I believe websites are made by caefully choosing a few simple ingredients and preparing them well.
@@ -25,7 +25,7 @@ templateEngineOverride: md, njk
         <div class="irevamp-card__content">
           <a href="{{ page.url }}" class="irevamp-card__title bold600">{{ page.data.title }}</a>
           <p class="irevamp-lead">{{ page.data.description }}</p>
-          <p class="irevamp-lead italics">{{ page.data.date | postDate  }}</p>
+          <p class="irevamp-card__date">{{ page.data.date | postDate  }}</p>
         </div>
       </li>
       {%- endfor -%}
