--- a/src/sass/_animations.scss
+++ b/src/sass/_animations.scss
@@ -12,13 +12,14 @@ a {
   background-size: 1px 3px;
   color: #ededed;
   text-decoration: none;
-  transition: background-size ease-in-out 0.4s;
+  transition: background-size ease-in-out 0.3s;
 }
 
 a:hover {
   color: $hover-font;
-  background-size: 4px 50px;
-  transition: color ease-in-out 0.2s;
+  background-size: 4px 50px;  
+  transition: all ease-in-out 0.4s;
+  transition: background-size ease-in-out 0.3s;
 }
 
 // Custom hover state
