Add goodreads widget placeholder

--- a/src/index.njk
+++ b/src/index.njk
@@ -32,6 +32,10 @@ templateEngineOverride: md, njk
     </ul>
   </div>
 
+  <div>
+{# {% include 'goodreads.html' %} #}
+  </div>
+
 {{ content | safe }}
 
 </main>
