--- a/src/index.njk
+++ b/src/index.njk
@@ -8,7 +8,7 @@ templateEngineOverride: md, njk
     <div class="intro irevamp-content-maxlength irevamp-ink--primary uppercase">author. developer. likes daal.</div>
     <div class="intro-about irevamp-content-maxlength irevamp-ink--primary">
       
-  Like any delicious [recipe](/colophon), I believe websites are made by caefully choosing a few simple ingredients and preparing them well.
+  Like any delicious [recipe](/menu), I believe websites are made by caefully choosing a few simple ingredients and preparing them well.
 
   I'm a big fan of most things. Currently, I work as a front-end web developer in [Portland, OR](https://parth.ninja).
 
