--- a/src/sass/_animations.scss
+++ b/src/sass/_animations.scss
@@ -62,7 +62,23 @@ a:hover {
 }
 
 .slide-up {
-  animation: slide-up 0.6s;
+  animation: slide-up 0.8s;
+}
+
+
+@keyframes menu-slide-up {
+  from {
+    opacity: 0.5;
+    margin-top: 50px;
+  }
+  to {
+    opacity: 1;
+    margin-top: 0;
+  }
+}
+
+.menu-slide-up {
+  animation: menu-slide-up 0.8s;
 }
 
 /* Waves*/
