--- a/src/_layouts/menucard.njk
+++ b/src/_layouts/menucard.njk
@@ -36,7 +36,6 @@
     <div class="irevamp-mx-auto menu-slide-up">
             <h1 class="menu-header irevamp-container uppercase"><a href="/menu">{{ title }}</a></h1>
             {# <p class="menu-description uppercase">{{ description }}</p> #}
-            <a class="menu-description" href="/"> Click here to go back home.</a>
 
             <div class="menu-section-title irevamp-mx-auto">{{ subtext }}</div>
             <img class="oak menu-slide-up" src="{{ '/oakbranch.png' | url }}">
@@ -44,6 +43,7 @@
     </div>
     {{ content | safe }} 
     <img class="oak menu-slide-up" src="{{ '/oakbranch.png' | url }}">
+            <a class="menu-description irevamp-mx-auto" href="/"> Click here to go back home.</a>
 
   </body>
 </html>
