Update menu card CSS

--- a/src/sass/_menu.scss
+++ b/src/sass/_menu.scss
@@ -99,6 +99,7 @@ $menu-font-cursive: 'Great Vibes', cursive;
         letter-spacing: 0.175em;
         font-weight: 700;
         font-size: 1.4em;
+        margin-bottom: 5px;
     }
 
     &__description {
