Add modes to menu

--- a/src/_layouts/menucard.njk
+++ b/src/_layouts/menucard.njk
@@ -32,7 +32,7 @@
       href="/feed/"
     />
   </head>
-  <body class="menu">
+  <body class="menu" id="menu">
     <div class="irevamp-mx-auto menu-slide-up">
             <h1 class="menu-header irevamp-container uppercase"><a href="/menu">{{ title }}</a></h1>
             {# <p class="menu-description uppercase">{{ description }}</p> #}
