--- a/src/index.njk
+++ b/src/index.njk
@@ -10,7 +10,7 @@ templateEngineOverride: md, njk
       
   Like any delicious [recipe](/menu), I believe websites are made by caefully choosing a few simple ingredients and preparing them well.
 
-  I'm a big fan of most things. Currently, I work as a front-end web developer in [Portland, OR](https://parth.ninja).
+  I'm a big fan of most things. Currently, I work as a front-end web developer in [Portland, OR]().
 
   </div>
   </div>
