--- a/src/sass/_menu.scss
+++ b/src/sass/_menu.scss
@@ -4,152 +4,169 @@ $menu-bg: #f8f0ce;
 $menu-color-primary: #122f54;
 $menu-color-secondary: #881100;
 
-$menu-font-sans: 'Lato', sans-serif;
-$menu-font-serif: 'Libre Baskerville', sans-serif;
-$menu-font-cursive: 'Great Vibes', cursive;
+$menu-font-sans: "Lato", sans-serif;
+$menu-font-serif: "Libre Baskerville", sans-serif;
+$menu-font-cursive: "Great Vibes", cursive;
 
 .menu {
-    background-color: $menu-bg;
-    transition: all ease-in-out 0.2s;
+  background-color: $menu-bg;
+  transition: all ease-in-out 0.3s;
+  color: $menu-color-primary;
+
+  padding-top: 10vh;
+  padding-bottom: 10vh;
+
+  a {
     color: $menu-color-primary;
+    text-decoration: none;
+    border: none;
+    background: none;
+    transition: color ease-in-out 0.3s;
+  }
 
-    padding-top: 10vh;
-    padding-bottom: 10vh;
+  .menu-header {
+    font-family: $menu-font-serif;
+    font-weight: 700;
+    letter-spacing: 0.15em;
+    text-align: center;
+  }
 
-    a {
-        color: $menu-color-primary;
-        text-decoration: none;
-        border: none;
-        background: none;
+  .menu-divider {
+    font-family: $menu-font-cursive;
+    font-weight: 400;
+    font-size: 2.5em;
+    text-align: center;
+
+    @include gt-sm {
+      font-size: 4em;
     }
+  }
 
-    .menu-header {
-        font-family: $menu-font-serif;
-        font-weight: 700;
-        letter-spacing: 0.15em;
-        text-align: center;
-    }
+  .menu-description {
+    border-bottom: 1px solid transparent;
+  }
 
-    .menu-divider {
-        font-family: $menu-font-cursive;
-        font-weight: 400;
-        font-size: 2.5em;
-        text-align: center;
+  .menu-description:hover {
+    border-bottom: 1px solid $menu-color-primary;
+    transition: all ease-in-out 0.2s;
+  }
 
-        @include gt-sm {
-            font-size: 4em;
-        }
-    }
+  .menu-section-title {
+    font-family: $menu-font-sans;
+    font-weight: 400;
+    color: $menu-color-secondary;
+    text-transform: uppercase;
+    text-align: center;
+    margin: 1em 0;
+    letter-spacing: 0.07em;
+  }
 
-    .menu-description {
-        border-bottom: 1px solid transparent;
-    }
+  .menu-collection {
+    max-width: 100ch;
+  }
+}
 
-    .menu-description:hover {
-        border-bottom: 1px solid $menu-color-primary;
-        transition: all ease-in-out 0.2s;
-    }
+.pista-mode {
+  background-color: #d1feff;
 
-    .menu-section-title {
-        font-family: $menu-font-sans;
-        font-weight: 400;
-        color: $menu-color-secondary;
-        text-transform: uppercase;
-        text-align: center;
-        margin: 1em 0;
-    }
+  .menu-item {
+    background-color: #d1feff;
+  }
+}
 
-    .menu-collection {
-        max-width: 100ch;
-    }
+.rose-mode {
+  background-color: #ffd1e3;
+
+  .menu-item {
+    background-color: #ffd1e3;
+  }
 }
 
 .menu-item {
+  display: flex;
+  flex-direction: row;
+  padding: 1.25em 1em;
+  border-radius: 8px;
+  margin: 0.5em auto;
+  justify-content: space-between;
+  background-color: $menu-bg;
+  filter: brightness(1);
+  transition: all ease-in-out 0.3s;
+  width: 100%;
+
+  @include gt-sm {
+    padding: 1.25em 1.5em;
+  }
+
+  u {
+    text-decoration: none;
+    border-bottom: none;
+    transition: all ease-in-out 0.1s;
+  }
+
+  &__about {
     display: flex;
-    flex-direction: row;
-    padding: 1.25em 1em;
-    border-radius: 8px;
-    margin: 0.5em auto;
-    justify-content: space-between;
-    background-color: $menu-bg;
-    filter: brightness(1);
-    transition: all ease-in-out 0.2s;
-    width: 100%;
+    flex-direction: column;
+    max-width: 80%;
+  }
 
-    @include gt-sm {
-        padding: 1.25em 1.5em;
-    }
+  &__title {
+    font-family: $menu-font-sans;
+    text-transform: uppercase;
+    letter-spacing: 0.175em;
+    font-weight: 700;
+    font-size: 1.4em;
+    margin-bottom: 5px;
+  }
 
-    u {
-        text-decoration: none;
-        border-bottom: none;
-        transition: all ease-in-out 0.1s;
-    }
+  &__description {
+    font-family: $menu-font-serif;
+    font-weight: 400;
+    font-size: 1em;
+    color: $menu-color-secondary;
+  }
 
+  &__price {
+    font-family: $menu-font-serif;
+    font-weight: 700;
+    margin-top: 5px;
+    font-size: 1.2em;
+  }
 
-    &__about {
-        display: flex;
-        flex-direction: column;
-        max-width: 80%;
-    }
-
-    &__title {
-        font-family: $menu-font-sans;
-        text-transform: uppercase;
-        letter-spacing: 0.175em;
-        font-weight: 700;
-        font-size: 1.4em;
-        margin-bottom: 5px;
-    }
-
-    &__description {
-        font-family: $menu-font-serif;
-        font-weight: 400;
-        font-size: 1em;
-        color: $menu-color-secondary;
-    }
-
-    &__price {
-        font-family: $menu-font-serif;
-        font-weight: 700;
-        margin-top: 5px;
-    }
-
-    &__title:hover span {
-        display: none;
-        transition: all ease-in-out 0.3s;
-      }
-      
+  &__title:hover span {
+    display: none;
+    transition: all ease-in-out 0.3s;
+  }
 }
 
 .oak {
-    text-align: center;
-    margin: 0 auto;
-    max-width: 150px;
-    
-    @include gt-sm {
-        max-width: 200px;
-    }
+  text-align: center;
+  margin: 0 auto;
+  max-width: 150px;
+
+  @include gt-sm {
+    max-width: 200px;
+  }
 }
 
 .menu-item:hover {
-    cursor: alias;
-    .menu-item__title>a::after {
-        transition: content ease-in-out 0.3s;
-        content: "🔗";
-        color: $menu-color-secondary;
-        display: inline-block;
-      }
+  cursor: alias;
+  .menu-item__title > a::after {
+    transition: all ease-in-out 0.3s;
+    content: "🔗";
+    color: $menu-color-secondary;
+    display: inline-block;
+  }
 
-    u {
-        border-bottom: 2px dashed $menu-color-secondary;
-    }
-    filter: brightness(1.08);
-    transition: all ease-in-out 0.2s;
+  u {
+    border-bottom: 2px dashed $menu-color-secondary;
+  }
+  filter: brightness(1.08);
+  transition: all ease-in-out 0.3s;
 }
 
 .menu-hori {
-    border-color: $menu-color-secondary;
-    width: 60%;
-    margin: 2em auto;
+  border-color: $menu-color-secondary;
+  width: 60%;
+  margin: 2em auto;
 }
