--- a/src/sass/_menu.scss
+++ b/src/sass/_menu.scss
@@ -67,18 +67,18 @@ $menu-font-cursive: "Great Vibes", cursive;
 }
 
 .pista-mode {
-  background-color: #d1feff;
+  background-color: #e2feff;
 
   .menu-item {
-    background-color: #d1feff;
+    background-color: #e2feff;
   }
 }
 
 .rose-mode {
-  background-color: #ffd1e3;
+  background-color: #ffe0ec;
 
   .menu-item {
-    background-color: #ffd1e3;
+    background-color: #ffe0ec;
   }
 }
 
