--- a/src/sass/_menu.scss
+++ b/src/sass/_menu.scss
@@ -67,10 +67,10 @@ $menu-font-cursive: "Great Vibes", cursive;
 }
 
 .pista-mode {
-  background-color: #e2feff;
+  background-color: #e2fff5;
 
   .menu-item {
-    background-color: #e2feff;
+    background-color: #e2fff5;
   }
 }
 
