Apply more fixes and updates. Whew

--- a/src/_includes/sitenav.njk
+++ b/src/_includes/sitenav.njk
@@ -4,7 +4,7 @@
   <div class="irevamp-sitenav__container">
     <a id="irevamp-siteid" href="/"
     {% if currentUrl === '/' %}aria-current="page"{% endif %}
-    ><img class="headerhome" src="{{ '/favicon-256.png' | url }}"></a>
+    ><img class="headerhome" src="{{ '/favicon.png' | url }}"></a>
     <ul role="list" class="irevamp-sitenav__navlist irevamp-list-unstyled">
       {# {% for link in collections.pages %}
       <li>
