--- a/src/sass/_menu.scss
+++ b/src/sass/_menu.scss
@@ -27,7 +27,7 @@ $menu-font-cursive: "Great Vibes", cursive;
   .menu-header {
     font-family: $menu-font-serif;
     font-weight: 700;
-    letter-spacing: 0.15em;
+    letter-spacing: 0.1em;
     text-align: center;
   }
 
@@ -72,6 +72,10 @@ $menu-font-cursive: "Great Vibes", cursive;
   .menu-item {
     background-color: #e2fff5;
   }
+
+  .menu-item:hover {
+    filter: brightness(1.1);
+  }
 }
 
 .rose-mode {
@@ -79,6 +83,37 @@ $menu-font-cursive: "Great Vibes", cursive;
 
   .menu-item {
     background-color: #ffe0ec;
+  }
+
+  .menu-item:hover {
+    filter: brightness(1.2);
+  }
+}
+
+.guinness-mode {
+  background-color: #212121;
+  color: #ffd6bd;
+  a {
+    color: #ffd6bd;
+  }
+
+  .menu-item {
+    &__title a:hover {
+      color: #ffd6bd;
+    }
+
+    &__description {
+      color: #ffd669;
+    }
+    background-color: #212121;
+  }
+
+  .menu-item:hover {
+    filter: brightness(1.3);
+  }
+
+  .menu-section-title {
+    color: #B8B8FF;
   }
 }
 
@@ -154,14 +189,14 @@ $menu-font-cursive: "Great Vibes", cursive;
   .menu-item__title > a::after {
     transition: all ease-in-out 0.3s;
     content: "🔗";
-    color: $menu-color-secondary;
+    // color: $menu-color-secondary;
     display: inline-block;
   }
 
   u {
     border-bottom: 2px dashed $menu-color-secondary;
   }
-  filter: brightness(1.08);
+  filter: brightness(1.09);
   transition: all ease-in-out 0.3s;
 }
 
