--- a/src/sass/_sitenav.scss
+++ b/src/sass/_sitenav.scss
@@ -51,6 +51,7 @@
 
     @include lt-sm {
       flex-direction: column;
+      align-items: flex-start;
     }
   }
 
@@ -74,6 +75,7 @@
   &__footer {
     
     @include lt-sm {
+      justify-content: right;
       line-height: 2;
       margin-left: 0;
     }
