--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -217,6 +217,11 @@ blockquote {
   line-height: 1.3;
 }
 
+.irevamp-description {
+  font-size: 1em;
+  color: $irevamp-color-secondary;
+}
+
 .irevamp-list-unstyled {
   list-style: none;
   padding: 0;
