--- a/src/_layouts/menucard.njk
+++ b/src/_layouts/menucard.njk
@@ -43,7 +43,7 @@
     </div>
     {{ content | safe }} 
     <img class="oak menu-slide-up" src="{{ '/oakbranch.png' | url }}">
-            <a class="menu-description irevamp-mx-auto" href="/">Click here to go back to main site.</a>
+            <a class="menu-redirect irevamp-mx-auto" href="/">Click here to go back to main site.</a>
 
   </body>
 </html>
