--- a/src/_layouts/page.njk
+++ b/src/_layouts/page.njk
@@ -5,7 +5,7 @@ layout: base.njk
 <header class="irevamp-hero">
   <div class="irevamp-container slide-up">
     <h1 class="irevamp-ink--primary irevamp-mb-none bold600">{{ title }}</h1>
-    <h5 class="irevamp-content-maxlength irevamp-ink--gray irevamp-mt-md irevamp-mx-auto">
+    <h5 class="irevamp-content-maxlength irevamp-mt-md irevamp-mx-auto irevamp-description">
       {{ description }}
     </h5>
   </div>
