--- a/src/sass/_theme.scss
+++ b/src/sass/_theme.scss
@@ -51,6 +51,7 @@ $irevamp-h5-font-size: 30px;
 $irevamp-h6-font-size: 28px;
 $irevamp-text-font-size: 22px;
 $irevamp-lead-font-size: 20px;
+$irevamp-mini-font-size: 18px;
 
 $irevamp-spacing: (
   sm: 1rem,
