--- a/src/_layouts/page.njk
+++ b/src/_layouts/page.njk
@@ -5,11 +5,15 @@ layout: base.njk
 <header class="irevamp-hero">
   <div class="irevamp-container slide-up">
     <h1 class="irevamp-ink--primary irevamp-mb-none bold600">{{ title }}</h1>
-    <h5 class="irevamp-content-maxlength irevamp-mt-md irevamp-mx-auto irevamp-description">
-      {{ description }}
+    {% if description %}
+    <h5 class="irevamp-content-maxlength irevamp-ink--gray irevamp-mt-md irevamp-mx-auto irevamp-description">
+     {{ description }}
     </h5>
+    {% endif %}
   </div>
 </header>
 <main class="irevamp-container slide-up">
+  <article class="irevamp-mx-auto">
     {{ content | safe }}
+  </article>
 </main>
