--- a/src/_layouts/post.njk
+++ b/src/_layouts/post.njk
@@ -5,13 +5,11 @@ layout: base.njk
 <header class="irevamp-hero">
   <div class="irevamp-container slide-up">
     <h1 class="irevamp-ink--primary irevamp-mb-none bold600">{{ title }}</h1>
-    <h5 class="irevamp-content-maxlength irevamp-ink--gray irevamp-mt-md irevamp-mx-auto">
+    <h5 class="irevamp-content-maxlength irevamp-ink--gray irevamp-mt-md irevamp-mx-auto irevamp-description">
       {{ description }}
     </h5>
   </div>
 </header>
 <main class="irevamp-container slide-up">
-  <article class="irevamp-mx-auto">
     {{ content | safe }}
-  </article>
 </main>
