Complete menu stage

--- a/src/index.njk
+++ b/src/index.njk
@@ -12,6 +12,10 @@ templateEngineOverride: md, njk
 
   I'm a big fan of most things. Currently, I work as a front-end web developer in [Portland, OR]().
 
+<div class="irevamp-skin"></div>
+
+> THIS WEBSITE IS **CURRENTLY** ~~AVAILABLE FOR VIEWING~~ UNDER CONSTRUCTION
+
   </div>
   </div>
 </header>
